# templates

./: .gitignore  README.md
appkit/basic/: .clang-format  CMakeLists.txt  CMakePresets.json  code.dev.code-workspace  main.mm  main.swift  project.json
appkit/basic_objc/: .gitignore  CMakeLists.txt  project.json
cmake/minimal_file/: CMakeLists.txt  project.json
cpp/atomic_wait/: main.cpp
cpp/clang-format/: project.json
cpp/clangd/: project.json
cpp/crash_second_thread/: .gitignore  build.sh  crash.cpp  main.cpp  run_all.sh
cpp/elapsed-timer/: elapsed_timer.h  project.json
cpp/language/any/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
cpp/language/concepts/: main.cpp
cpp/language/copy-swap/: main.cpp
cpp/language/expected/: build.sh  compile_flags.txt  main.cpp
cpp/language/if-constexpr/: main.cpp
cpp/language/index_sequence/: main.cpp
cpp/language/ranges/: main.cpp
cpp/language/span/: build.sh  main.cpp
cpp/malloc_stress/: CMakeLists.txt  main.cpp  project.json
cpp/minimal_cpp/: CMakeLists.txt  project.json
cpp/modules/: CMakeLists.txt  CMakePresets.json  main.cpp  my_module_example.cppm  test.sh
cpp/shared_ptr/benchmark/: CMakeLists.txt  CMakePresets.json  foo.cpp  foo.h  main.cpp
cpp/source_location/: CMakeLists.txt  main.cpp
cpp/thread_pool/: CMakeLists.txt  bench  example  main.cpp  project.json  run_perf.py
cpp/tsan-test/: CMakeLists.txt  statictest.cpp
cuda/minimal/hello_cu/: .gitignore  CMakeLists.txt  main.cpp  project.json  test.cu  vscode.code-workspace
cuda/minimal/hello_npp/: CMakeLists.txt  main.cpp  project.json  vscode.code-workspace
cuda/test/cudaMemcpy2D/: CMakeLists.txt  main.cpp  project.json  vscode.code-workspace.template
flutter/minimized_timer/: README.md  pubspec.yaml
flutter/minimized_timer/lib/: main.dart
flutter/minimized_timer/linux/: CMakeLists.txt  my_application.cc
flutter/minimized_timer/test/: widget_test.dart
flutter/minimized_timer/web/: index.html  manifest.json
flutter/minimized_timer/windows/: CMakeLists.txt
flutter/multiview_playground/: README.md  pubspec.yaml
flutter/multiview_playground/lib/: main.dart
flutter/multiview_playground/linux/: CMakeLists.txt  my_application.cc
flutter/multiview_playground/test/: widget_test.dart
flutter/multiview_playground/web/: index.html  manifest.json
flutter/multiview_playground/windows/: CMakeLists.txt
github/minimal_workflow/: project.json
gitignore/: .gitignore  project.json
imgui/minimal/: README.md
linux/dmabuf/: main.c  project.json
linux/heaptrack/frequent_allocations/: CMakeLists.txt  main.cpp  project.json
mesa/drm/basic/: .gitignore  build.sh  main.cpp
mesa/drm/basic_egl/: build.sh  main.cpp
mesa/drm/basic_egl_drm/: .gitignore
mesa/drm/basic_egl_x11/: CMakeLists.txt  main.cpp
mesa/gbm/basic/: .gitignore  build.sh  main.cpp
qt/allocator_fastbins_test/: CMakeLists.txt  code.code-workspace  main.cpp
qt/check_ssl/: .gitignore  check_ssl.pro  main.cpp  project.json  template.json
qt/compile_flags_macos/: compile_flags.txt  project.json
qt/egl/egl_qwindow/: CMakeLists.txt  CMakePresets.json  code.code-workspace  code.code-workspace.template  main.cpp  project.json
qt/ios/test/: CMakeLists.txt  ExportOptions.plist  build-ios.sh  build-macos.sh  project.json  test.pro
qt/macOS/test/: CMakeLists.txt  CMakePresets.json  Entitlements.entitlements  Info.plist  build-macos.sh  build-xcode.sh  build.sh  icon.icns  main.qml  notarize.sh  package-appstore.sh  project.json  test.pro
qt/nsalert_qtwidgets/: code.dev.code-workspace  source_macOS.sh
qt/opengl/chess/: .gitignore  boarditem.cpp  boarditem.h  chess.pro  controlpanel.cpp  controlpanel.h  controlpanel.ui  light.h  main.cpp  piece.h  pieceitem.cpp  pieceitem.h  resources.qrc  scene.cpp  scene.h  sceneitem.cpp  sceneitem.h  window.cpp  window.h
qt/qmake_minimal/: main.cpp  project.json  qmake_minimal.pro
qt/qml/create_destroy_window_in_sequence/: CMakeLists.txt  CMakePresets.json  main.cpp  project.json
qt/qml/create_destroy_window_in_sequence/MyTest/: .qmlls.ini  main.qml
qt/qml/forever_rotating_rectangle/: main.qml  project.json
qt/qml/minimal/: CMakeLists.txt  CMakePresets.json  main.cpp  main.qml  project.json
qt/qml/minimal/MyTest/: .qmlls.ini  Obj.cpp  Obj.h
qt/qml/multiwindow_fps_cpp/: .gitignore  CMakeLists.txt  main.cpp
qt/qml/multiwindow_fps_cpp/MyTest/: .qmlls.ini  CMakeLists.txt  Controller.cpp  Controller.h  MyRect.qml  SecondWindow.qml  main.qml
qt/qtcore_minimal/: CMakeLists.txt  main.cpp  template.json
qt/qtcore_minimal_lib/: .gitignore  CMakeLists.txt  lib.cpp  lib.h  project.json
qt/qtimer_file_descriptors_stress/: CMakeLists.txt  main.cpp  project.json
qt/qtimer_tests/: CMakeLists.txt  CMakePresets.json  main.cpp  project.json
qt/qtnetworkproxy_test/: .gitignore  CMakeLists.txt  main.cpp
qt/qttest_minimal/: CMakeLists.txt  project.json  test.cpp
qt/qtwidgets_minimal/: CMakeLists.txt  CMakePresets.json  project.json
qt/shadercache_test/: CMakeLists.txt  README.md  code.code-workspace  main.cpp  main_qopenglprogram.cpp  main_qquickwindow.cpp  utils.h
qt/shadercache_test/MyTest/: .qmlls.ini  main.qml
qt/wayland/minimal_compositor/: CMakeLists.txt  LICENSE.txt  main.qml  project.json
qt/wayland/toplevel_drag/: .clang-format  CMakeLists.txt  code.code-workspace  main.cpp  project.json
qt/wayland/window_benchmark/: .clangd  CMakeLists.txt  CMakePresets.json  main.cpp  main.qml  main_client.cpp  main_client.qml  project.json  run_client.sh  run_compositor.sh
qt/webkit_qtwidgets/: CMakeLists.txt  main.mm  project.json  test.html  webviewqwidget.h  webviewqwidget.mm
rust/minimal/: Cargo.toml  build.sh  project.json  vscode.code-workspace  vscode.code-workspace.template
rust/minimal/src/: main.rs
slint/rust/: project.json
swift/cmake/: CMakeLists.txt  code.dev.code-workspace  main.cpp  main.swift  mylibrary.swift  mystaticlibrary.swift  project.json
swift/webkit/: CMakeLists.txt  CMakePresets.json  code.dev.code-workspace  main.swift  mywebkitlib.swift  project.json
vulkan/tutorial/: README.md
(+61 files in other folders)
